# ChangeLog for net-im/kadu-audacious_mediaplayer
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Sep 2009; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-audacious_mediaplayer-0.6.5.2.ebuild,
  +kadu-audacious_mediaplayer-0.6.5.3.ebuild:
  Bumped.

  03 May 2009; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-audacious_mediaplayer-0.6.5.1.ebuild,
  +kadu-audacious_mediaplayer-0.6.5.2.ebuild:
  Bumped. Removed previous version.

  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-audacious_mediaplayer-0.6.0_p20080423.ebuild,
  +kadu-audacious_mediaplayer-0.6.5.1.ebuild,
  -kadu-audacious_mediaplayer-20080224-r1.ebuild,
  -kadu-audacious_mediaplayer-20080423.ebuild, +metadata.xml:
  Bumped. Removed cruft. Some repoman fixes.

  28 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  kadu-audacious_mediaplayer-20080224-r1.ebuild,
  kadu-audacious_mediaplayer-20080423.ebuild:
  Cosmetic fixes.

  14 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-audacious_mediaplayer-20080423.ebuild:
  Bumped.

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-audacious_mediaplayer-20080224.ebuild:
  Removed cruft.

  12 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-audacious_mediaplayer-20080224-r1.ebuild:
  Moved LDFLAGS and CXXFLAGS.
