@@ -1,6 +1,8 @@
+AUX qtdbus-link.patch 546 RMD160 540c8ec4c715ad8dbc3c46387aa37bb4c1fa6c64 SHA1 daef178935a322d6b1046f89010bc4181760191d SHA256 fb568fb2cb7eb757dd9404127a6f677d6ebd057e1480aab748a41a6d7a08831e
 DIST audacious_mediaplayer-20080423.tar.bz2 3063 RMD160 b24ebb43c70c7ab0bf46f9792a74ba8e55fd5490 SHA1 512a455138ebbf64bb2576a6d719e6883838faeb SHA256 d3b995ad9cb6ae699a296c218f0870a2053dc0e54b3eb8a741f17bb9eb4d99fc
 DIST kadu-0.6.5.3.tar.bz2 1676317 RMD160 95609df3d2c75f765861234ee2bc2bf9eb36ab10 SHA1 0714e007e42ff4c9abecee6f9b47e62d291fb6f6 SHA256 ed2ff311d1896a6344af91e65c901d72f93e2e005989a82c6f35a4dbfced6a75
 EBUILD kadu-audacious_mediaplayer-0.6.0_p20080423.ebuild 607 RMD160 b142a5901e41c5d8be16fe3d03a8d1db31d9fd6c SHA1 f4a71c081b0cffcc17fa0b7ee0d1809bdcb4e365 SHA256 f596c396b9a0a6c265ea450874318beb17400600f35760d22ef3dd07584588ee
+EBUILD kadu-audacious_mediaplayer-0.6.5.3-r1.ebuild 352 RMD160 48f0e4c8d587dad91529841865a180ca7a469e4c SHA1 5cede5212bc1d38a65ddaf2949641465ac76d461 SHA256 da96cd6b68a916e95afb104ebdbbee420b328321a90344f60e6736c07caf88d5
 EBUILD kadu-audacious_mediaplayer-0.6.5.3.ebuild 320 RMD160 4b82a76729d3d77952ff31cbf3d8104cddcc7f9d SHA1 e3bc78004f39efcf6b2acbcc494f6285b941b9cf SHA256 86170ca60576a823aafc14cec002f2e85498d2d547730e6e6ff74924dd6cf56e
-MISC ChangeLog 1285 RMD160 e34ab9bace060b457d1b76df87d14d6154615375 SHA1 131a6ae83becf5ab50de5f093eb0a6d3ad57bcef SHA256 9fd3cc68cbecaefd9fe4081c094b419c0ceb4f3779ba2a94d2e25856e5e78a38
+MISC ChangeLog 1450 RMD160 32eeda6122fd515b6fdb4b59cfdaaea15bdbea33 SHA1 65caff052b9327c66aaceaac90c15be64f5357ca SHA256 b0fc99acd5b6433a3db9e4ad43047eb2111d3b94f94f8f41f51cbe660e88aac2
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
