@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Sep 2009; Michał Ziąbkowski <mziab@o2.pl>
+  +kadu-audacious_mediaplayer-0.6.5.3-r1.ebuild:
+  Bumped with patch that should resolve unresolved symbol issues.
+
   14 Sep 2009; Michał Ziąbkowski <mziab@o2.pl>
   -kadu-audacious_mediaplayer-0.6.5.2.ebuild,
   +kadu-audacious_mediaplayer-0.6.5.3.ebuild:
